# drivethru

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  example.env  main.py  mypy.ini  pyproject.toml
assistant/: factory.py  prompter.py
audio/: player.py  recorder.py
config/: provider.py
stt/: converter.py
tools/: command_line_arguments.py  logger.py
tts/: converter.py
